@@ -27,6 +27,7 @@
  Bug fixes:
 
    - myIDialog: fix focus issue when running 'maybe_non_modal()' (todo #1355).
+   - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
    - Recurrent: fix periodicity details count.
 
  Other changes:
